--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="resources/css/style.css">
 </head>
 <body>
-    <h1>Discoer hidden places in the world around you</h1>
-    <p><a href = "#">Download excursion(Coming Soon!)</a></p>
-    
+    <h1 class="header-main">Discover hidden places in the world around you</h1>
+    <p ><a href = "#" class = "link">Download excursion(Coming Soon!)</a></p>
+    <img src="resources/images/camp.webp">
 </body>
 </html>
