--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 <body>
     <h1 class="header-main">Discover hidden places in the world around you</h1>
     <p ><a href = "#" class = "link">Download excursion(Coming Soon!)</a></p>
+    <video src="resources/videos/excursion.mp4" autoplay></video>
+    <br>
+    <h2>Your Personal travel guide</h2>
+    <p class="t1">Excursion remembers the places you like and recommends new points of interest around you</p>
     <img src="resources/images/camp.webp">
+    <br>
+    <img src="resources/images/phone.webp" class="phone">
+    <h2>Coming soon for android and Iphone</h2>
+    <p ><a href = "#" class = "link">Download excursion(Coming Soon!)</a></p>
 </body>
 </html>
