--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
     <img src="resources/images/phone.webp" class="phone">
     <h2>Coming soon for android and Iphone</h2>
     <p ><a href = "#" class = "link">Download excursion(Coming Soon!)</a></p>
+    <footer>
+        
+    </footer>
 </body>
 </html>
